--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,16 @@ services:
     ports:
       - "5000:5000"
     environment:
-      - AWS_ACCESS_KEY=your_access_key
-      - AWS_SECRET_KEY=your_secret_key
-      - AWS_REGION=your_region
       - FLASK_ENV=development
+    secrets:
+      - aws_access_key
+      - aws_secret_key
+      - aws_region
+
+secrets:
+  aws_access_key:
+    external: true
+  aws_secret_key:
+    external: true
+  aws_region:
+    external: true
